--- a/join.html
+++ b/join.html
@@ -5,8 +5,8 @@ title: Join Open Gazettes
             
 <div class="join_intro">
 
-<p><a href="#" target="_blank">Code for South Africa</a>, the <a href="#" target="_blank">Southern African Legal Information Institute</a>, <a href="#" target="_blank">Indigo Trust</a> and <a href="#" target="_blank">Code for Africa</a> are building the biggest collection of freely available Gazettes in South Africa, and we need your help.</p><p>If you have any government gazettes, in any format (print, pdf, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk if you need it.</p>
-<button name="button">Liberate your Gazettes</button>
+<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available Gazettes in South Africa, and we need your help.</p><p>If you have any government gazettes, in any format (print, pdf, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk if you need it.</p>
+<a href="#"><button name="button">Liberate your Gazettes</button></a>
 
 <h2>Why are Gazettes important?</h2>
 <p>The Government Gazettes are an official record of South Africa and communicate some of the most important information about the country. And yet, many people cannot find this information or must pay to access it.</p>
