update join page, add banner on homepage, upload banner images

--- a/join.html
+++ b/join.html
@@ -2,20 +2,23 @@
 layout: default
 title: Join Open Gazettes
 ---
-            
-<div class="join_intro">
+<div class="col-md-8 col-md-offset-2">
+		<div class="img-center">
+			<img src="/img/hands.png" style="width:60%;" />
+			<p class="join-title">Join the liberation!</p>
+		</div>
+		<div class="join_intro">
+				<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available Gazettes in South Africa, and we need your help.</p><p>If you have any government gazettes, in any format (print, pdf, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk if you need it.</p>
 
-<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available Gazettes in South Africa, and we need your help.</p><p>If you have any government gazettes, in any format (print, pdf, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk if you need it.</p>
-<a href="#"><button name="button">Liberate your Gazettes</button></a>
+				<h2>Why are Gazettes important?</h2>
+				<p>The Government Gazettes are an official record of South Africa and communicate some of the most important information about the country. And yet, many people cannot find this information or must pay to access it.</p>
 
-<h2>Why are Gazettes important?</h2>
-<p>The Government Gazettes are an official record of South Africa and communicate some of the most important information about the country. And yet, many people cannot find this information or must pay to access it.</p>
+				<h2>What's in a Gazette?</h2>
+				<p>Gazettes contain information like government announcements, by-laws, name changes, corporate agreements and liquidations, land claims, court orders, tenders and more. </p>
 
-<h2>What's in a Gazette?</h2>
-<p>Gazettes contain information like government announcements, by-laws, name changes, corporate agreements and liquidations, land claims, court orders, tenders and more. </p>
-
-<h2>How can you help?</h2>
-<p>We’re looking for Government and Provincial Gazettes from before 2012, especially from before 1980 (?). Print or digital (PDF) are both great.</p>
-
+				<h2>How can you help?</h2>
+				<p>We’re looking for Government and Provincial Gazettes from before 2012, especially from before 1980 (?). Print or digital (PDF) are both great.</p>
+		</div>
+		
+		<a href="#"><button name="button">Liberate your Gazettes</button></a>
 </div>
-
