--- a/join.html
+++ b/join.html
@@ -4,8 +4,8 @@ title: Join Open Gazettes
 ---
 <div class="col-md-8 col-md-offset-2">
 		<div class="img-center">
-			<img src="/img/hands.png" style="width:60%;" />
-			<p class="join-title">Join the liberation!</p>
+			<img src="/img/hands.png" width="60%" />
+			<a href="#join-form"><p class="join-title">Join the liberation!</p></a>
 		</div>
 		<div class="join_intro">
 				<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available Gazettes in South Africa, and we need your help.</p><p>If you have any government gazettes, in any format (print, pdf, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk if you need it.</p>
@@ -19,6 +19,14 @@ title: Join Open Gazettes
 				<h2>How can you help?</h2>
 				<p>We’re looking for Government and Provincial Gazettes from before 2012, especially from before 1980 (?). Print or digital (PDF) are both great.</p>
 		</div>
-		
-		<a href="#"><button name="button">Liberate your Gazettes</button></a>
+
+		<div id="join-form">
+
+		<!--
+		<h1>Share your Gazettes</h1>
+		<p>form goes here</p>
+		-->
+
+
+		</div>
 </div>
