--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About OpenGazettes
 
 <div class="col-md-8 col-md-offset-2">
 
-<div class="container">
+<!--<div class="container">
 <div class="row">
 <h2>Credits</h2>
 	<p>Photo of Eastern Cape by <a href="#"></a></p>
@@ -19,10 +19,7 @@ title: About OpenGazettes
 	<p>Photo of Western Cape by <a href="#"></a></p>
 	<p>Photo of Union Buildings by <a href="#"></a></p>
 </div>
-</div>
-
-
-</div>
+</div>-->
 
 <article class="about">
   <section>
@@ -62,3 +59,5 @@ title: About OpenGazettes
   </section>
 
 </article>
+
+</div>
