fix top nav for mobile view, add join the liberation button to about page

--- a/about.html
+++ b/about.html
@@ -42,6 +42,8 @@ title: About OpenGazettes
     </ul>
   </section>
 
+  <a href="/join"><button name="button">Join the liberation</button></a>
+
 </article>
 
 </div>
