fix spelling error, replace free state image, update styling, redirect contact to about, add atrribution

--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@ title: About OpenGazettes
     <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely
     available to anyone. Gazettes are a critical source of information and record of South African history. They should
     be easy to find and user, and freely available to everyone.</p>
+
+    <a href="/join"><button name="button">Join the liberation</button></a>
+
   </section>
 
   <section>
@@ -40,9 +43,26 @@ title: About OpenGazettes
     <ul class="fa-ul">
       <li><i class="fa fa-li fa-puzzle-piece text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines">http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines</a></li>
     </ul>
+
+    <div class="credits">
+    <h3>Credits</h3>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Port Elizabeth, Eastern Cape by <a href="https://commons.wikimedia.org/wiki/File:South_Africa_-_Port_Elizabeth_(16277766870).jpg" target="_blank">Diriye Amey</a> on Wikipedia</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Bloemfontein, Free State by <a href="https://commons.wikimedia.org/wiki/File:9_2_302_0027-Vierde_Raadsaal-Bloemfontein-Front-s.jpg" target="_blank">Janek Szymanowski</a> on Wikimedia</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Johannesburg, Gauteng by <a href="https://en.wikipedia.org/wiki/File:Johannesburg_Skyline.jpg" target="_blank">Chris7cn</a> on Wikipedia</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Mapungubwe, Limpopo by <a href="https://commons.wikimedia.org/wiki/File:MapungubweHill.jpg" target="_blank">JJ van Zyl</a> on Wikimedia</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Sun City, North West by <a href="https://www.flickr.com/photos/south-african-tourism/19910947343" target="_blank">South African Tourism</a> on Flickr</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Durban, Kwa-zulu Natal by <a href="https://commons.wikimedia.org/wiki/File:Durban_beach.jpg" target="_blank">Steve Roetz</a> on Wikimedia</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Upington, Northen Cape by <a href="https://commons.wikimedia.org/wiki/File:Upington.jpg" target="_blank">Rick Walker</a> on Wikimedia</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Kruger National Park, Mpumalanga<a href="https://commons.wikimedia.org/wiki/File:Giraffes_in_Kruger_National_Park_02.JPG" target="_blank">Kore</a> on Wikimedia</p>
+    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Cape Town, Western Cape by <a href="https://pixabay.com/en/cape-town-table-mountain-waterfront-1562907/" target="_blank">HPBotha</a> on Pixabay</p>
+    </div>
+
   </section>
 
-  <a href="/join"><button name="button">Join the liberation</button></a>
+  <h2 id="contact-us">Contact us</h2>
+
+
+
 
 </article>
 
