--- a/join.html
+++ b/join.html
@@ -21,12 +21,6 @@ title: Join Open Gazettes
 		</div>
 
 		<div id="join-form">
-
-		<!--
-		<h1>Share your Gazettes</h1>
-		<p>form goes here</p>
-		-->
-
-
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1Ot4huVFQ-04sKASqHt46AbhTo9jDXSZbdpx3hv_vw-o03g/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 		</div>
 </div>
