--- a/about.html
+++ b/about.html
@@ -1,44 +1,42 @@
 ---
 layout: default
-title: About OpenGazettes
+title: About Open Gazettes
 ---
 
 <div class="col-md-8 col-md-offset-2">
 
 <article class="about">
   <section>
-    <p class="lead">Open Gazettes is the largest freely available online collection of Gazettes in South Africa.</p>
+    <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
 
-    <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely
-    available to anyone. Gazettes are a critical source of information and record of South African history. They should
-    be easy to find and user, and freely available to everyone.</p>
+    <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
 
     <a href="/join"><button name="button">Join the liberation</button></a>
 
   </section>
 
   <section>
-    <h2>API Access to the Gazettes</h2>
+    <h2>API access to the gazettes</h2>
 
     <p>There are a few ways of getting the gazettes programatically. If you need help please email <a href="mailto:gazettes@code4sa.org">gazettes@code4sa.org</a>.</p>
 
-    <h3>Recently Added Gazettes Atom Feed</h3>
+    <h3>Recently added gazettes atom feed</h3>
 
-    <p>An atom feed of the 100 most recently added gazettes. This is useful to put into your feed reader to find out when we add new gazettes.</p>
+    <p>This is an atom feed of the 100 most recently added gazettes. This is useful to put into your feed reader to find out when we add new gazettes.</p>
     <ul class="fa-ul">
       <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom</a></li>
     </ul>
 
-    <h3>All Gazettes Gazettes Atom Feed</h3>
+    <h3>All gazettes atom feed</h3>
 
-    <p>An atom feed of ALL gazettes. Take care, this currently over 10MB big.</p>
+    <p>This is an atom feed of ALL gazettes. Take care, this currently over 10MB big.</p>
     <ul class="fa-ul">
       <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom</a></li>
     </ul>
 
-    <h3>JSON Index</h3>
+    <h3>JSON index</h3>
 
-    <p>An index of the metadata of all gazettes in our collection is available in the <a href="http://jsonlines.org/">JSON lines</a> format, one
+    <p>This is an index of the metadata of all gazettes in our collection is available in the <a href="http://jsonlines.org/">JSON lines</a> format, one
     gazette per line.</p>
     <ul class="fa-ul">
       <li><i class="fa fa-li fa-puzzle-piece text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines">http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines</a></li>
@@ -60,9 +58,7 @@ title: About OpenGazettes
   </section>
 
   <h2 id="contact-us">Contact us</h2>
-
-
-
+  <p>If you would like to get in touch or contribute gazettes, you can contact us on <a href="mailto:gazettes@code4sa.org"">gazettes@code4sa.org</a> or go to <a href="/join">opengazettes.org.za/join</a> and complete the #GazetteLiberation form.</p>
 
 </article>
 
