full width footer, add page titles, update styles, reverse buttons, move contact on about page, move cta above button, position national gazettes button

--- a/about.html
+++ b/about.html
@@ -1,65 +1,73 @@
 ---
 layout: default
 title: About Open Gazettes
+pagetag: About Open Gazettes
 ---
 
 <div class="col-md-8 col-md-offset-2">
-
 <article class="about">
+
   <section>
-    <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
-
-    <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
-
-    <a href="/join"><button name="button">Join the liberation</button></a>
-
+      <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
+      <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
   </section>
 
-  <section>
-    <h2>API access to the gazettes</h2>
-
-    <p>There are a few ways of getting the gazettes programatically. If you need help please email <a href="mailto:gazettes@code4sa.org">gazettes@code4sa.org</a>.</p>
-
-    <h3>Recently added gazettes atom feed</h3>
-
-    <p>This is an atom feed of the 100 most recently added gazettes. This is useful to put into your feed reader to find out when we add new gazettes.</p>
-    <ul class="fa-ul">
-      <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom</a></li>
-    </ul>
-
-    <h3>All gazettes atom feed</h3>
-
-    <p>This is an atom feed of ALL gazettes. Take care, this currently over 10MB big.</p>
-    <ul class="fa-ul">
-      <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom</a></li>
-    </ul>
-
-    <h3>JSON index</h3>
-
-    <p>This is an index of the metadata of all gazettes in our collection is available in the <a href="http://jsonlines.org/">JSON lines</a> format, one
-    gazette per line.</p>
-    <ul class="fa-ul">
-      <li><i class="fa fa-li fa-puzzle-piece text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines">http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines</a></li>
-    </ul>
-
-    <div class="credits">
-    <h3>Credits</h3>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Port Elizabeth, Eastern Cape by <a href="https://commons.wikimedia.org/wiki/File:South_Africa_-_Port_Elizabeth_(16277766870).jpg" target="_blank">Diriye Amey</a> on Wikipedia</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Bloemfontein, Free State by <a href="https://commons.wikimedia.org/wiki/File:9_2_302_0027-Vierde_Raadsaal-Bloemfontein-Front-s.jpg" target="_blank">Janek Szymanowski</a> on Wikimedia</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Johannesburg, Gauteng by <a href="https://en.wikipedia.org/wiki/File:Johannesburg_Skyline.jpg" target="_blank">Chris7cn</a> on Wikipedia</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Mapungubwe, Limpopo by <a href="https://commons.wikimedia.org/wiki/File:MapungubweHill.jpg" target="_blank">JJ van Zyl</a> on Wikimedia</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Sun City, North West by <a href="https://www.flickr.com/photos/south-african-tourism/19910947343" target="_blank">South African Tourism</a> on Flickr</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Durban, Kwa-zulu Natal by <a href="https://commons.wikimedia.org/wiki/File:Durban_beach.jpg" target="_blank">Steve Roetz</a> on Wikimedia</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Upington, Northen Cape by <a href="https://commons.wikimedia.org/wiki/File:Upington.jpg" target="_blank">Rick Walker</a> on Wikimedia</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Kruger National Park, Mpumalanga<a href="https://commons.wikimedia.org/wiki/File:Giraffes_in_Kruger_National_Park_02.JPG" target="_blank">Kore</a> on Wikimedia</p>
-    <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Cape Town, Western Cape by <a href="https://pixabay.com/en/cape-town-table-mountain-waterfront-1562907/" target="_blank">HPBotha</a> on Pixabay</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+          <a href="/join"><button name="button">Join the liberation</button></a>
+      </div>
     </div>
+  </div>
+
+  <section>
+      <h2 id="contact-us">Contact us</h2>
+      <p>If you would like to get in touch or contribute gazettes, you can contact us on <a href="mailto:gazettes@code4sa.org"">gazettes@code4sa.org</a> or go to <a href="/join">opengazettes.org.za/join</a> and complete the #GazetteLiberation form.</p>
+  </section>
+
+  <section>
+      <h2>API access to the gazettes</h2>
+
+      <p>There are a few ways of getting the gazettes programatically. If you need help please email <a href="mailto:gazettes@code4sa.org">gazettes@code4sa.org</a>.</p>
+
+      <h3>Recently added gazettes atom feed</h3>
+
+      <p>This is an atom feed of the 100 most recently added gazettes. This is useful to put into your feed reader to find out when we add new gazettes.</p>
+      <ul class="fa-ul">
+        <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/recently-added.atom</a></li>
+      </ul>
+
+      <h3>All gazettes atom feed</h3>
+
+      <p>This is an atom feed of ALL gazettes. Take care, this currently over 10MB big.</p>
+      <ul class="fa-ul">
+        <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom</a></li>
+      </ul>
+
+      <h3>JSON index</h3>
+
+      <p>This is an index of the metadata of all gazettes in our collection is available in the <a href="http://jsonlines.org/">JSON lines</a> format, one
+      gazette per line.</p>
+      <ul class="fa-ul">
+        <li><i class="fa fa-li fa-puzzle-piece text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines">http://code4sa-gazettes.s3.amazonaws.com/archive/index/latest.jsonlines</a></li>
+      </ul>
 
   </section>
 
-  <h2 id="contact-us">Contact us</h2>
-  <p>If you would like to get in touch or contribute gazettes, you can contact us on <a href="mailto:gazettes@code4sa.org"">gazettes@code4sa.org</a> or go to <a href="/join">opengazettes.org.za/join</a> and complete the #GazetteLiberation form.</p>
+  <section>
+    <div class="credits">
+      <h2>Credits</h2>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Port Elizabeth, Eastern Cape by <a href="https://commons.wikimedia.org/wiki/File:South_Africa_-_Port_Elizabeth_(16277766870).jpg" target="_blank">Diriye Amey</a> on Wikipedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Bloemfontein, Free State by <a href="https://commons.wikimedia.org/wiki/File:9_2_302_0027-Vierde_Raadsaal-Bloemfontein-Front-s.jpg" target="_blank">Janek Szymanowski</a> on Wikimedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of the Johannesburg, Gauteng by <a href="https://en.wikipedia.org/wiki/File:Johannesburg_Skyline.jpg" target="_blank">Chris7cn</a> on Wikipedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Mapungubwe, Limpopo by <a href="https://commons.wikimedia.org/wiki/File:MapungubweHill.jpg" target="_blank">JJ van Zyl</a> on Wikimedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Sun City, North West by <a href="https://www.flickr.com/photos/south-african-tourism/19910947343" target="_blank">South African Tourism</a> on Flickr</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Durban, Kwa-zulu Natal by <a href="https://commons.wikimedia.org/wiki/File:Durban_beach.jpg" target="_blank">Steve Roetz</a> on Wikimedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Upington, Northen Cape by <a href="https://commons.wikimedia.org/wiki/File:Upington.jpg" target="_blank">Rick Walker</a> on Wikimedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Kruger National Park, Mpumalanga<a href="https://commons.wikimedia.org/wiki/File:Giraffes_in_Kruger_National_Park_02.JPG" target="_blank">Kore</a> on Wikimedia</p>
+      <p><i class="fa fa-picture-o" aria-hidden="true"></i> Photo of Cape Town, Western Cape by <a href="https://pixabay.com/en/cape-town-table-mountain-waterfront-1562907/" target="_blank">HPBotha</a> on Pixabay</p>
+      </div>
+  </section>
 
 </article>
-
 </div>
