--- a/join.html
+++ b/join.html
@@ -1,12 +1,18 @@
 ---
 layout: default
 title: Join Open Gazettes
+pagetag: How to join the liberation
 ---
 <div class="col-md-8 col-md-offset-2">
+		
 		<div class="img-center">
-			<img src="/img/hands.png" width="60%" />
-			<a href="#join-form"><p class="join-title">Join the liberation!</p></a>
+			<div class="banner">
+				<img src="/img/hands.png" width="60%" />
+				<p>Help us by sharing your gazettes!</p>
+				<a href="#join-form"><p class="join-title">Join the liberation!</p></a>
+			</div>
 		</div>
+
 		<div class="join_intro">
 				<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available gazettes in South Africa, and we need your help.</p><p>If you have any government gazettes, in any format (hard copy, PDF, scan, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk.</p>
 
