--- a/about.html
+++ b/about.html
@@ -5,20 +5,21 @@ pagetag: About Open Gazettes
 ---
 
 <div class="col-md-8 col-md-offset-2">
+
+  <section>
+    <div class="img-center">
+      <div class="banner">
+        <a href="join/#join-form"><p class="join-title">Join the liberation! <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
+      </div>
+    </div>
+  </section>
+
 <article class="about">
 
   <section>
       <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
       <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
   </section>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-          <a href="/join"><button name="button">Join the liberation</button></a>
-      </div>
-    </div>
-  </div>
 
   <section>
       <h2 id="contact-us">Contact us</h2>
