--- a/join.html
+++ b/join.html
@@ -8,7 +8,7 @@ pagetag: How to join the liberation
 		<div class="img-center">
 			<div class="banner">
 				<img src="/img/hands.png" width="60%" />
-				<a href="#join-form"><p class="join-title">Join the liberation!</p></a>
+				<a href="#join-form"><p class="join-title">Join the liberation! <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
 			</div>
 		</div>
 
