2col homepage header, update styles, move position of bin on about page, full width header, transparent banner, add and insert (commented) icons to join page

--- a/join.html
+++ b/join.html
@@ -16,12 +16,15 @@ pagetag: How to join the liberation
 				<p><a href="http://code4sa.org/" target="_blank">Code for South Africa</a>, the <a href="http://www.saflii.org/" target="_blank">Southern African Legal Information Institute</a>, <a href="https://indigotrust.org.uk/" target="_blank">Indigo Trust</a> and <a href="https://codeforafrica.org/" target="_blank">Code for Africa</a> are building the biggest collection of freely available gazettes in South Africa, and we need your help.</p><p>If you have any government gazettes, in any format (hard copy, PDF, scan, etc), contribute them to our public collection and become a part of the #GazetteLiberation campaign. Encourage and challenge everyone you know to take part too.</p><p>The collection is freely available for anyone to use. Gazettes are available on this website, individually, and in bulk.</p>
 
 				<h2>Why are gazettes important?</h2>
+				<!--<img src="img/icons/treasure.png" width="10%" alt="Why are gazettes important?" title="Why are gazettes important?" />-->
 				<p>The Government Gazettes are an official record of South Africa and communicate some of the most important information about the country. And yet, many people cannot find this information or must pay to access it.</p>
 
 				<h2>What's in a gazette?</h2>
+				<!--<img src="img/icons/file.png" width="10%" alt="What's in a gazette?" title="What's in a gazette?" />-->
 				<p>Gazettes contain information like government announcements, by-laws, name changes, corporate agreements and liquidations, land claims, court orders, tenders and more. </p>
 
 				<h2>How can you help?</h2>
+				<!--<img src="img/icons/fists.png" width="10%" alt="How can you help?" title="How can you help?" />-->
 				<p>We’re looking for Government and Provincial Gazettes from before 2012, especially from before 1980. Print or digital (PDF) are both great.</p>
 		</div>
 
