--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
       <div class="banner">
         <img src="/img/banner_5.png" style="width:100%;" />
         <p>Help us build the biggest collection of freely available gazettes in South Africa</p>
-        <a href="/join"><p class="join-title">#GazetteLiberation <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
+        <a href="/join"><p class="join-title">Join the Gazette Liberation <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
       </div>
     </div>
   </div>
