Two-col banner on homepage
This takes up less vertical space

--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 ---
-layout: default
+layout: base
 ---
 
 <div class="introduction">
-  <div class="container col-md-8 col-md-offset-2">
-    <div class="img-center">
-      <div class="banner">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
         <img src="/img/banner_5.png" style="width:100%;" />
-        <p>Help us build the biggest collection of freely available gazettes in South Africa</p>
-        <a href="/join"><p class="join-title">Join the Gazette Liberation <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
+      </div>
+      <div class="col-sm-6">
+        <div class="banner">
+          <p>Help us build the biggest collection of freely available gazettes in South Africa</p>
+          <a href="/join" class="big-cta">Join the Gazette Liberation&nbsp;<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <div class="gazettes_nav">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
 
-<div class="container col-md-8 col-md-offset-2">
-  <h2>National Gazettes</h2>
-  <div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a></div>
-    </div>
-  </div>
-</div>
+        <h2>National Gazettes</h2>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a></div>
+        </div>
 
-<div class="container col-md-8 col-md-offset-2">
-  <h2>Provincial Gazettes</h2>
-    <div class="row">
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-EC/"><button class="gazettes_nav_btn btn_ec" name="button"><span class="btn_text">Eastern Cape</span></button></a></div>
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-FS/"><button class="gazettes_nav_btn btn_fs" name="button"><span class="btn_text">Free State</span></button></a></div>
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-GT/"><button class="gazettes_nav_btn btn_gt" name="button"><span class="btn_text">Gauteng</span></button></a></div>       
-    </div>
-    <div class="row">
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NL/"><button class="gazettes_nav_btn btn_kzn" name="button"><span class="btn_text">KwaZulu Natal</span></button></a></div>
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-LP/"><button class="gazettes_nav_btn btn_lim" name="button"><span class="btn_text">Limpopo</span></button></a></div>
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-MP/"><button class="gazettes_nav_btn btn_mp" name="button"><span class="btn_text">Mpumalanga</span></button></a></div>
-    </div>
-    <div class="row">
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NC/"><button class="gazettes_nav_btn btn_nc" name="button"><span class="btn_text">Northern Cape</span></button></a></div>
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NW/"><button class="gazettes_nav_btn btn_nw" name="button"><span class="btn_text">North-West</span></button></a></div>
-      <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-WC/"><button class="gazettes_nav_btn btn_wc" name="button"><span class="btn_text">Western Cape</span></button></a></div>
+        <h2>Provincial Gazettes</h2>
+        <div class="row">
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-EC/"><button class="gazettes_nav_btn btn_ec" name="button"><span class="btn_text">Eastern Cape</span></button></a></div>
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-FS/"><button class="gazettes_nav_btn btn_fs" name="button"><span class="btn_text">Free State</span></button></a></div>
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-GT/"><button class="gazettes_nav_btn btn_gt" name="button"><span class="btn_text">Gauteng</span></button></a></div>
+        </div>
+        <div class="row">
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NL/"><button class="gazettes_nav_btn btn_kzn" name="button"><span class="btn_text">KwaZulu Natal</span></button></a></div>
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-LP/"><button class="gazettes_nav_btn btn_lim" name="button"><span class="btn_text">Limpopo</span></button></a></div>
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-MP/"><button class="gazettes_nav_btn btn_mp" name="button"><span class="btn_text">Mpumalanga</span></button></a></div>
+        </div>
+        <div class="row">
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NC/"><button class="gazettes_nav_btn btn_nc" name="button"><span class="btn_text">Northern Cape</span></button></a></div>
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NW/"><button class="gazettes_nav_btn btn_nw" name="button"><span class="btn_text">North-West</span></button></a></div>
+          <div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-WC/"><button class="gazettes_nav_btn btn_wc" name="button"><span class="btn_text">Western Cape</span></button></a></div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
