Full-width national gazettes button

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@ layout: base
       <div class="col-md-8 col-md-offset-2">
 
         <h2>National Gazettes</h2>
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a></div>
-        </div>
+        <a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a>
 
         <h2>Provincial Gazettes</h2>
         <div class="row">
