--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ pagetag: About Open Gazettes
 
       <h3>All gazettes atom feed</h3>
 
-      <p>This is an atom feed of ALL gazettes. Take care, this currently over 10MB big.</p>
+      <p>This is an atom feed of ALL gazettes. Take care, this is currently over 10MB big.</p>
       <ul class="fa-ul">
         <li><i class="fa fa-feed fa-li text-muted"></i> <a href="http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom" target="_blank">http://code4sa-gazettes.s3.amazonaws.com/archive/all.atom</a></li>
       </ul>
