--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ pagetag: About Open Gazettes
   <section>
     <div class="img-center">
       <div class="banner">
-        <a href="join/#join-form"><p class="join-title">Join the liberation! <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
+        <a href="/join#join-form"><p class="join-title">Join the liberation! <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
       </div>
     </div>
   </section>
