Search on homepage

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ layout: base
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
+        <h2>Search the Gazettes</h2>
+
+        {% include search.html %}
 
         <h2>National Gazettes</h2>
         <a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a>
