add four column cta on about page

--- a/about.html
+++ b/about.html
@@ -19,6 +19,31 @@ pagetag: About Open Gazettes
   <section>
       <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
       <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
+      <a class="readmore" href="#" target="_blank">read more</a>
+  </section>
+
+  <section>
+    <h2>How can you use gazettes?</h2>
+    <div class="row">
+
+      <div class="col-xs-6 col-sm-3">
+      <img src="" alt="" />
+      Nuclear procurement through the lens of government gazettes
+      </div>
+
+      <div class="col-xs-6 col-sm-3">
+        Putting together opengazettes.org.za
+      </div>
+
+      <div class="col-xs-6 col-sm-3">
+        Using open gazettes as a journalist
+      </div>
+
+      <div class="col-xs-6 col-sm-3">
+        Using open gazettes as civil society
+      </div>
+
+    </div>
   </section>
 
   <section>
