--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ pagetag: About Open Gazettes
     <div class="row">
 
       <div class="col-xs-6 col-sm-3">
-      <img src="" alt="" />
+      <img src="img/icons/password.png" alt="Nuclear procurement through the lens of government gazettes" />
       Nuclear procurement through the lens of government gazettes
       </div>
 
