update icons layout on about page

--- a/about.html
+++ b/about.html
@@ -23,26 +23,27 @@ pagetag: About Open Gazettes
   </section>
 
   <section>
-    <h2>How can you use gazettes?</h2>
-    <div class="row">
-
+    <div class="row icons-section">
       <div class="col-xs-6 col-sm-3">
-      <img src="img/icons/password.png" alt="Nuclear procurement through the lens of government gazettes" />
-      Nuclear procurement through the lens of government gazettes
+        <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" width="64px" />
+        <p>Using open gazettes as a journalist</p>
+        <p class="due">5 Oct 2016</p>
       </div>
-
       <div class="col-xs-6 col-sm-3">
-        Putting together opengazettes.org.za
+        <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" width="64px" />
+        <p>Using open gazettes as civil society</p>
+        <p class="due">6 Oct 2016</p>
       </div>
-
       <div class="col-xs-6 col-sm-3">
-        Using open gazettes as a journalist
+      <img class="icons-cta" src="img/icons/password.png" alt="Nuclear procurement through the lens of government gazettes" width="64px" />
+      <p>Nuclear procurement through the lens of government gazettes</p>
+      <p class="due">10 Oct 2016</p>
       </div>
-
       <div class="col-xs-6 col-sm-3">
-        Using open gazettes as civil society
+        <img class="icons-cta" src="img/icons/browser.png" alt="Putting together opengazettes.org.za" width="64px" />
+        <p>Putting together opengazettes.org.za</p>
+        <p class="due">11 Oct 2016</p>
       </div>
-
     </div>
   </section>
 
