add cta for blog posts to landing page

--- a/about.html
+++ b/about.html
@@ -18,11 +18,9 @@ pagetag: About Open Gazettes
 
   <section>
       <p class="lead">Open Gazettes is the largest freely available online collection of gazettes in South Africa.</p>
-      <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
-      <a class="readmore" href="#" target="_blank">read more</a>
-  </section>
 
-  <section>
+
+<section>
     <div class="row icons-section">
       <div class="col-xs-6 col-sm-3">
         <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" width="64px" />
@@ -45,6 +43,11 @@ pagetag: About Open Gazettes
         <p class="due">11 Oct 2016</p>
       </div>
     </div>
+  </section>
+
+
+      <p>OpenGazettes.org.za is a collaboration between a number of partners to make South African Government Gazettes freely available to anyone. Gazettes are a critical source of information and record of South African history. They should be easy to find and use, and freely available to everyone.</p>
+      <a class="readmore" href="#" target="_blank">Read more</a>
   </section>
 
   <section>
