--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@ layout: base
         <img src="/img/banner_5.png" style="width:100%;" />
       </div>
       <div class="col-sm-6">
+
         <div class="banner">
           <p>Help us build the biggest collection of freely available gazettes in South Africa</p>
           <a href="/join" class="big-cta">Join the Gazette Liberation&nbsp;<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
         </div>
+
+          <div class="row icons-section">
+            <div class="col-sm-6">
+                <img class="icons-cta" src="img/icons/news-breaking.png" alt="Using open gazettes as a journalist" width="64px" />
+                <p>Using open gazettes as a journalist</p>
+                <p class="due">5 Oct 2016</p>
+            </div>
+            <div class="col-sm-6">
+                <img class="icons-cta" src="img/icons/group.png" alt="Using open gazettes as civil society" width="64px" />
+                <p>Using open gazettes as civil society</p>
+                <p class="due">6 Oct 2016</p>
+            </div>
+          </div>
+
       </div>
     </div>
   </div>
