--- a/join.html
+++ b/join.html
@@ -9,6 +9,7 @@ pagetag: How to join the liberation
 			<div class="banner">
 				<img src="/img/hands.png" width="60%" />
 				<a href="#join-form" class="big-cta">Join the liberation! <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+				<a class="readmore" href="#" target="_blank">Read more</a>
 			</div>
 		</div>
 
