--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: base
         <div class="banner">
           <p>Help us build the biggest collection of freely available gazettes in South Africa</p>
           <a href="/join" class="big-cta">Join the Gazette Liberation&nbsp;<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a>
+          <a class="readmore" href="#" target="_blank">Read more</a>
         </div>
 
           <div class="row icons-section">
